--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -64,7 +66,7 @@
         <ul>
           <li>
             <img
-              src="./images/what-are-we-doing/examples-of-work1.jpg"
+              src="./images/examples-of-work1.jpg"
               alt="examples-of-work"
               width="360"
               height="300"
@@ -72,7 +74,7 @@
           </li>
           <li>
             <img
-              src="./images/what-are-we-doing/examples-of-work2.jpg"
+              src="./images/examples-of-work2.jpg"
               alt="examples-of-work"
               width="360"
               height="300"
@@ -80,7 +82,7 @@
           </li>
           <li>
             <img
-              src="./images/what-are-we-doing/examples-of-work3.jpg"
+              src="./images/examples-of-work3.jpg"
               alt="examples-of-work"
               width="360"
               height="300"
@@ -92,37 +94,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/our-team/mark-guerrero.jpg"
-              alt="employee"
-              width="264"
-              height="260"
-            />
+            <img src="./images/mark-guerrero.jpg" alt="employee" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/our-team/tom-ford.jpg" alt="employee" width="264" height="260" />
+            <img src="./images/tom-ford.jpg" alt="employee" width="264" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/our-team/camila-garcia.jpg"
-              alt="employee"
-              width="264"
-              height="260"
-            />
+            <img src="./images/camila-garcia.jpg" alt="employee" width="264" height="260" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/our-team/daniel-wilson.jpg"
-              alt="employee"
-              width="264"
-              height="260"
-            />
+            <img src="./images/daniel-wilson.jpg" alt="employee" width="264" height="260" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
